--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html dir="rtl" lang="ar">
 
 <head>
     <meta charset="UTF-8">
@@ -7,15 +7,298 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="mohamed khidir ageeb">
     <meta name="keywords" content="السيرة الذاتية للمبرمج,محمد خضر عجيب,mohamed ageeb,ageeb soft,عجيب سوفت">
-    <title>السيرة الذاتية - للمبرمج / محمدخضر عجيب</title>
-    
+    <title>السيرة الذاتية - للمبرمج / محمد خضر عجيب</title>
+    <meta name="description" content="السيرة الذاتية للمرمج محمد خضر عجيب سوداني الجنسية مبرمج ويب asp.net core">
+    <link rel="shortcut icon" href="./img/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet" />
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <!-- MDB -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.1/mdb.min.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@700&family=Rakkas&display=swap" rel="stylesheet">
 </head>
 
-<body dir="rtl">
+<body id="myBody">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="sideNav">
+        <a class="navbar-brand js-scroll-trigger" href="#myBody">
+            <span class="d-block d-lg-none"><strong style="color: yellow;">السيرة الذاتية للمبرمج / </strong>Mohamed
+                Ageeb - محمد عجيب</span>
+            <span class="d-none d-lg-block">
+                <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="./img/mylogo.png"
+                    alt="..." /></span>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#myNavBar"
+            aria-controls="myNavBar" aria-expanded="false" aria-label="Toggle navigation"><span
+                class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="myNavBar">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">من أنا</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">الخبرات</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">التعليم</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">المهارات</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">الإهتمامات</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">الشهادات</a></li>
+
+            </ul>
+        </div>
+    </nav>
 
 
 
+    <div id="mySection" class="">
+        <!-- About-->
+        <section class="resume-section" id="about">
+            <div class="resume-section-content">
+                <h2 class="mb-2">من أنا</h2>
+
+                <h1 class="mb-0 h1">
+                    محمد خضر عجيب<br>
+                    <span class="text-primary">Mohamed Ageeb</span>
+                </h1>
+
+                <p class="lead mb-4">
+                <div class="lead mb-3"><strong>التخصص الأساسي: </strong> مطور (اي اس بي دوت نت) - ASP.NET Developer.
+                </div>
+                <div class="lead mb-3"><strong>تاريخ الميلاد: </strong> 1402هـ / 1982 م .</div>
+                <div class="lead mb-3"><strong>الجنسية :</strong> سوداني</div>
+                <div class="lead mb-3"><strong>الحالة الإجتماعية :</strong> متزوج</div>
+                <div class="lead mb-3"><strong>العنوان :</strong> المملكة العربية السعودية - مكة المكرمة .</div>
+
+
+
+                </p>
+                <div class="social-icons">
+                    <a class="social-icon phone" href="tel:00966540259572"><i class="fas fa-phone"></i></a>
+                    <a class="social-icon whatsapp" href="https://wa.me/966540259572"><i
+                            class="fab fa-whatsapp"></i></a>
+                    <a class="social-icon gmail" href="mailto:ageeb1982@gmail.com"><i
+                            class="fas fa-envelope-square"></i></a>
+                    <a class="social-icon web" href="https://ageebsoft.blogspot.com/"><i class="fa fa-globe"></i></a>
+                    <a class="social-icon linkedin" href="https://www.linkedin.com/in/mohamed-ageeb-5983a7167/"><i
+                            class="fab fa-linkedin-in"></i></a>
+                    <a class="social-icon github" href=" https://github.com/ageeb1982"><i class="fab fa-github"></i></a>
+                    <a class="social-icon twitter" href="https://twitter.com/ageeb1982"><i
+                            class="fab fa-twitter"></i></a>
+                    <a class="social-icon facebook" href="https://www.facebook.com/ageebSoft/"><i
+                            class="fab fa-facebook-f"></i></a>
+                </div>
+            </div>
+        </section>
+        <hr class=" m-0" />
+        <!-- Experience-->
+        <section class="resume-section" id="experience">
+            <div class="resume-section-content">
+                <h2 class="mb-5">الخبرات</h2>
+                <div class="mycards d-flex  justify-content-between">
+
+                    <div class="card mx-3">
+                        <h3 class="card-header">ASP.Net Framework</h3>
+                        <div class="card-body">
+                            <div class="subheading">MVC / Core / API </div>
+                        </div>
+                        <div class="card-footer">
+                            <span class="text-primary">80%</span>
+                        </div>
+                    </div>
+                    <div class="card mx-3">
+                        <h3 class="card-header">ASP.Net Framework</h3>
+                        <div class="card-body">
+                            <div class="subheading">MVC / Core / API </div>
+                        </div>
+                        <div class="card-footer">
+                            <span class="text-primary">80%</span>
+                        </div>
+                    </div>
+                    <div class="card mx-3">
+                        <h3 class="card-header">DotNet Devoloper</h3>
+                        <div class="card-body">
+                            <div class="subheading">Web App / WinForms  </div>
+                        </div>
+                        <div class="card-footer">
+                            <span class="text-primary">80%</span>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+   
+    </section>
+    <hr class="m-0" />
+    <!-- Education-->
+    <section class="resume-section" id="education">
+        <div class="resume-section-content">
+            <h2 class="mb-5">التعليم</h2>
+
+            <div class="mycards d-flex  justify-content-between">
+
+                <div class="card mx-3">
+                    <h3 class="card-header mb-0">جامعة الجزيرة - بالسودان</h3>
+
+                    <div class="card-body">
+                        <div class="subheading mb-3">دبلوم وسيط</div>
+                        <div>كلية العلوم الرياضية والحاسوب</div>
+                    </div>
+                    <div class="card-footer">
+                        <p>الدرجة: الأولى</p>
+                        <div class="flex-shrink-0"><span class="text-primary">2005م - 1425هـ </span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card mx-3">
+                    <h3 class="card-header mb-0">مركز سودانت</h3>
+
+                    <div class="card-body">
+                        <div class="subheading mb-3">دبلوم </div>
+                        <div>صيانة وشبكات</div>
+                    </div>
+                    <div class="card-footer">
+                        <p>التقدير : جيد جداً</p>
+                        <div class="flex-shrink-0"><span class="text-primary">2000م - 1421هـ </span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card mx-3">
+                    <h3 class="card-header mb-0">المركز الأهلي لتعليم الآلة الكاتبه - بجازان</h3>
+
+                    <div class="card-body">
+                        <div class="subheading mb-3">دبلوم</div>
+                        <div>ادخال البيانات ومعالجة النصوص</div>
+                    </div>
+                    <div class="card-footer">
+                        <p>التقدير : جيد جداً</p>
+                        <div class="flex-shrink-0"><span class="text-primary">1990م - 1420هـ </span>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+    </section>
+    <hr class="m-0" />
+    <!-- Skills-->
+    <section class="resume-section" id="skills">
+        <div class="resume-section-content">
+            <h2 class="mb-5">المهارات</h2>
+            <div class="subheading mb-3">لغات البرمجة والتقنيات</div>
+            <ul class="list-inline dev-icons">
+                <li class="list-inline-item"><i class="fab fa-html5"></i></li>
+                <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+                <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
+                <li class="list-inline-item"><i class="fab fa-angular"></i></li>
+                <li class="list-inline-item"><i class="fab fa-react"></i></li>
+                <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
+                <li class="list-inline-item"><i class="fab fa-sass"></i></li>
+                <li class="list-inline-item"><i class="fab fa-less"></i></li>
+                <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
+                <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
+                <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
+                <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+            </ul>
+            <div class="subheading mb-3">Workflow</div>
+            <ul class="fa-ul mb-0">
+                <li>
+                    <span class="fa-li"><i class="fas fa-check"></i></span>
+                    Mobile-First, Responsive Design
+                </li>
+                <li>
+                    <span class="fa-li"><i class="fas fa-check"></i></span>
+                    Cross Browser Testing & Debugging
+                </li>
+                <li>
+                    <span class="fa-li"><i class="fas fa-check"></i></span>
+                    Cross Functional Teams
+                </li>
+                <li>
+                    <span class="fa-li"><i class="fas fa-check"></i></span>
+                    Agile Development & Scrum
+                </li>
+            </ul>
+        </div>
+    </section>
+    <hr class="m-0" />
+    <!-- Interests-->
+    <section class="resume-section" id="interests">
+        <div class="resume-section-content">
+            <h2 class="mb-5">الإهتمامات</h2>
+            <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the
+                winter, I am an avid
+                skier and novice ice climber. During the warmer months here in Colorado, I enjoy
+                mountain biking,
+                free
+                climbing, and kayaking.</p>
+            <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre
+                movies and television
+                shows, I am an aspiring chef, and I spend a large amount of my free time exploring
+                the latest
+                technology
+                advancements in the front-end web development world.</p>
+        </div>
+    </section>
+    <hr class="m-0" />
+    <!-- Awards-->
+    <section class="resume-section" id="awards">
+        <div class="resume-section-content">
+            <h2 class="mb-5">الشهادات</h2>
+            <ul class="fa-ul mb-0">
+                <li>
+                    <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                    Google Analytics Certified Developer
+                </li>
+                <li>
+                    <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                    Mobile Web Specialist - Google Certification
+                </li>
+                <li>
+                    <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                    1
+                    <sup>st</sup>
+                    Place - University of Colorado Boulder - Emerging Tech Competition 2009
+                </li>
+                <li>
+                    <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                    1
+                    <sup>st</sup>
+                    Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design
+                    Category)
+                </li>
+                <li>
+                    <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                    2
+                    <sup>nd</sup>
+                    Place - University of Colorado Boulder - Emerging Tech Competition 2008
+                </li>
+                <li>
+                    <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                    1
+                    <sup>st</sup>
+                    Place - James Buchanan High School - Hackathon 2006
+                </li>
+                <li>
+                    <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                    3
+                    <sup>rd</sup>
+                    Place - James Buchanan High School - Hackathon 2005
+                </li>
+            </ul>
+        </div>
+    </section>
+    </div>
+
+
+
+ 
+
+
+
+    <!-- MDB -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.1/mdb.min.js"></script>
     <script src="./js/script.js"></script>
 </body>
 
