--- a/index.html
+++ b/index.html
@@ -24,24 +24,41 @@
 
 <body id="myBody">
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="sideNav">
-        <a class="navbar-brand js-scroll-trigger" href="#myBody">
-            <span class="d-block d-lg-none"><strong style="color: yellow;">السيرة الذاتية للمبرمج / </strong>Mohamed
-                Khidir Ageeb - محمد خضر عجيب</span>
+        <a class="navbar-brand js-scroll-trigger" href="./">
+            <span class="d-block d-lg-none">
+                <strong style="color: yellow;">السيرة الذاتية / </strong>محمد خضر عجيب
+                <i class="miniMenu d-lg-none d-flex  justify-content-center flex-row flex-wrap">
+                    <a href="#about" title="من أنا" class="myLink minix active"><i class="fas fa-info-circle"></i></a>
+                    <a href="#experience" title="الخبرات" class="myLink minix"><i class="fas fa-code"></i> </a>
+                    <a href="#education" title="التعليم" class="myLink minix"><i class="fas fa-graduation-cap"></i></a>
+                    <a href="#skills" title="المهارات" class="myLink minix"><i class="fas fa-cogs"></i> </a>
+                    <a href="#interests" title="الاهتمامات" class="myLink minix"><i class="fab fa-gratipay"></i> </a>
+                    <a href="#awards" title="الشهادات" class="myLink minix"><i class="fas fa-award"></i> </a>
+                </i>
+            </span>
+
             <span class="d-none d-lg-block">
                 <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="./img/mylogo.png"
                     alt="..." /></span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#myNavBar"
-            aria-controls="myNavBar" aria-expanded="false" aria-label="Toggle navigation"><span
-                class="navbar-toggler-icon"></span></button>
+            aria-controls="myNavBar" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="myNavBar">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link myLink active js-scroll-trigger" href="#about">من أنا</a></li>
-                <li class="nav-item"><a class="nav-link myLink js-scroll-trigger" href="#experience">الخبرات</a></li>
-                <li class="nav-item"><a class="nav-link myLink js-scroll-trigger" href="#education">التعليم</a></li>
-                <li class="nav-item"><a class="nav-link myLink js-scroll-trigger" href="#skills">المهارات</a></li>
-                <li class="nav-item"><a class="nav-link myLink js-scroll-trigger" href="#interests">الإهتمامات</a></li>
-                <li class="nav-item"><a class="nav-link myLink js-scroll-trigger" href="#awards">الشهادات</a></li>
+
+                <li class="nav-item"><a class="nav-link myLink active js-scroll-trigger" href="#about"><i
+                            class="fas fa-info-circle"></i> من أنا</a></li>
+                <li class="nav-item"><a class="nav-link myLink js-scroll-trigger" href="#experience"><i
+                            class="fas fa-code"></i> الخبرات</a></li>
+                <li class="nav-item"><a class="nav-link myLink js-scroll-trigger" href="#education"><i
+                            class="fas fa-graduation-cap"></i> التعليم</a></li>
+                <li class="nav-item"><a class="nav-link myLink js-scroll-trigger" href="#skills"><i
+                            class="fas fa-cogs"></i> المهارات</a></li>
+                <li class="nav-item"><a class="nav-link myLink js-scroll-trigger" href="#interests"><i
+                            class="fab fa-gratipay"></i> الإهتمامات</a></li>
+                <li class="nav-item"><a class="nav-link myLink js-scroll-trigger" href="#awards"><i
+                            class="fas fa-award"></i> الشهادات</a></li>
 
             </ul>
         </div>
@@ -163,43 +180,26 @@
         <section class="resume-section" id="education">
             <div class="resume-section-content">
                 <h2 class="mb-5">التعليم</h2>
+                <div class="mycards d-flex  justify-content-center flex-row flex-wrap">
 
-                <div class="mycards d-flex  justify-content-between">
-
-                    <div class="card mx-3">
-                        <h3 class="card-header mb-0">جامعة الجزيرة - بالسودان</h3>
-
+                    <div class="card">
+                        <h3 class="card-header">جامعة الجزيرة - بالسودان</h3>
                         <div class="card-body">
-                            <div class="subheading mb-3">دبلوم وسيط</div>
+                            <div class="subheading">دبلوم وسيط</div>
                             <div>كلية العلوم الرياضية والحاسوب</div>
+
                         </div>
                         <div class="card-footer">
-                            <p>الدرجة: الأولى</p>
-                            <div class="flex-shrink-0"><span class="text-primary">2005م - 1425هـ </span>
-                            </div>
+                            <span class="text-primary">2005م - 1425هـ</span>
                         </div>
                     </div>
 
-                    <div class="card mx-3">
-                        <h3 class="card-header mb-0">مركز سودانت</h3>
-
+                    <div class="card">
+                        <h3 class="card-header">المركز الأهلي لتعليم الآلة الكاتبه - بجازان</h3>
                         <div class="card-body">
-                            <div class="subheading mb-3">دبلوم </div>
-                            <div>صيانة وشبكات</div>
-                        </div>
-                        <div class="card-footer">
-                            <p>التقدير : جيد جداً</p>
-                            <div class="flex-shrink-0"><span class="text-primary">2000م - 1421هـ </span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="card mx-3">
-                        <h3 class="card-header mb-0">المركز الأهلي لتعليم الآلة الكاتبه - بجازان</h3>
-
-                        <div class="card-body">
-                            <div class="subheading mb-3">دبلوم</div>
+                            <div class="subheading">دبلوم</div>
                             <div>ادخال البيانات ومعالجة النصوص</div>
+
                         </div>
                         <div class="card-footer">
                             <p>التقدير : جيد جداً</p>
@@ -208,9 +208,23 @@
                         </div>
                     </div>
 
+                    <div class="card">
+                        <h3 class="card-header">مركز سودانت</h3>
+                        <div class="card-body">
+                            <div class="subheading">دبلوم</div>
+                            <div>صيانة وشبكات</div>
+
+                        </div>
+                        <div class="card-footer">
+                            <p>التقدير : جيد جداً</p>
+                            <span class="text-primary">2000م - 1421هـ </span>
+                        </div>
+                    </div>
 
                 </div>
+
             </div>
+
         </section>
         <hr class="m-0" />
         <!-- Skills-->
@@ -218,7 +232,7 @@
             <div class="resume-section-content">
                 <h2 class="mb-5">المهارات</h2>
                 <div class="subheading mb-3">لغات البرمجة والتقنيات</div>
-                 
+
                 <div class="subheading mb-3">Workflow</div>
                 <ul class="fa-ul mb-0">
                     <li>
