--- a/index.html
+++ b/index.html
@@ -239,28 +239,145 @@
         <!-- Skills-->
         <section class="resume-section" id="skills">
             <div class="resume-section-content">
-                <h2 class="mb-5">المهارات</h2>
-                <div class="subheading mb-3">لغات البرمجة والتقنيات</div>
+                <h2 class="mb-5">المهارات(لغات البرمجة والتقنيات)</h2>
+                <div class="myImgs">
+                    <div class="card card-color">
+                        <img src="./img/tech/html.png" class="myImgs-img" alt="....">
+                        <div>HTML</div>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                                style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
+                        </div>
+                    </div>
+                    <div class="card card-color">
+                        <img src="./img/tech/css3.png" class="myImgs-img" alt="....">
+                        <div class="card-lng">CSS</div>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                                style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                        </div>
+                    </div>
+                    <div class="card card-color"><img src="./img/tech/javascript.png" class="myImgs-img" alt="....">
+                        <div class="card-lng">Java Script</div>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                                style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                        </div>
+                    </div>
+                    <div class="card card-color"><img src="./img/tech/bootstrap.png" class="myImgs-img" alt="....">
+                        <div class="card-lng">BootStrap</div>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                                style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+                        </div>
+                    </div>
+                    <div class="card card-color"><img src="./img/tech/nodejs.png" class="myImgs-img" alt="....">
+                        <div class="card-lng">NodeJS</div>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                                style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+                        </div>
+                    </div>
+                    <div class="card card-color"><img src="./img/tech/csharp.png" class="myImgs-img" alt="....">
+                        <div class="card-lng">C#</div>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                                style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+                        </div>
+                    </div>
+                    <div class="card card-color"><img src="./img/tech/mvc.png" class="myImgs-img" alt="....">
+                        <div class="card-lng">ASP.NET MVC</div>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                                style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+                        </div>
+                    </div>
+                    <div class="card card-color"><img src="./img/tech/aspcore.png" class="myImgs-img" alt="....">
+                        <div class="card-lng">ASP.NET Core</div>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 80%;"
+                                aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+                        </div>
+                    </div>
+                                    <div class="card card-color"><img src="./img/tech/signalr.png" class="myImgs-img" alt="....">
+                                        <div class="card-lng">SignalR</div>
+                                        <div class="progress">
+                                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 70%;"
+                                                aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                                        </div>
+                                    </div>
 
-                <div class="subheading mb-3">Workflow</div>
-                <ul class="fa-ul mb-0">
-                    <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
-                        Mobile-First, Responsive Design
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
-                        Cross Browser Testing & Debugging
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
-                        Cross Functional Teams
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
-                        Agile Development & Scrum
-                    </li>
-                </ul>
+
+
+                    <div class="card card-color"><img src="./img/tech/MsSqlserver.png" class="myImgs-img" alt="....">
+                        <div class="card-lng">MS SQLServer</div>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                                style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
+                        </div>
+                    </div>
+                    <div class="card card-color"><img src="./img/tech/kotlin.png" class="myImgs-img" alt="....">
+                        <div class="card-lng">Kotlin</div>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                                style="width: 55%;" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">55%</div>
+                        </div>
+                    </div>
+                    <div class="card card-color"><img src="./img/tech/dart.png" class="myImgs-img" alt="....">
+                        <div class="card-lng">Dart</div>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                                style="width: 55%;" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">55%</div>
+                        </div>
+                    </div>
+                    <div class="card card-color"><img src="./img/tech/flutter.png" class="myImgs-img" alt="....">
+                        <div class="card-lng">Flutter</div>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                                style="width: 55%;" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">55%</div>
+                        </div>
+                    </div>
+
+<div class="card card-color"><img src="./img/tech/git.png" class="myImgs-img" alt="....">
+    <div class="card-lng">git</div>
+    <div class="progress">
+        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 65%;"
+            aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">65%</div>
+    </div>
+</div>
+
+
+                    <div class="card card-color"><img src="./img/tech/winserver.png" class="myImgs-img" alt="....">
+                        <div class="card-lng">Windows Server</div>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                                style="width: 55%;" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">55%</div>
+                        </div>
+                    </div>
+                    <div class="card card-color"><img src="./img/tech/debian.png" class="myImgs-img" alt="....">
+                        <div class="card-lng">Debian</div>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                                style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
+                        </div>
+                    </div>
+                    <div class="card card-color"><img src="./img/tech/ubunt.png" class="myImgs-img" alt="....">
+                        <div class="card-lng">Ubuntu</div>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                                style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
+                        </div>
+                    </div>
+                    <div class="card card-color"><img src="./img/tech/linuxmint.png" class="myImgs-img" alt="....">
+                        <div class="card-lng">Linux Mint</div>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                                style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
+                        </div>
+                    </div>
+
+                </div>
+                
             </div>
         </section>
         <hr class="m-0" />
