--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 
 
                     <div class="card">
-                        <h3 class="card-header">مستشفى الأمير سلطان بالمدينة النبوية</h3>
+                        <h3 class="card-header">مستشفى الأمير سلطان</h3>
                         <strong class="text-center">(السعودية - المدينة)</strong>
                         <div class="card-body">
                             <strong>نوع النظام: </strong><span class="subheading">موقع تعريفي بالمستشفى/إدارة
