--- a/index.html
+++ b/index.html
@@ -328,28 +328,20 @@
                 <h2 class="mb-5"> الخبرات العملية</h2>
                 <div class="mycards d-flex  justify-content-center flex-row flex-wrap">
 
+                    <!--مؤسسة محمد صالح المنتشري-->
                     <div class="card">
                         <h3 class="card-header">مؤسسة محمد صالح المنتشري</h3>
                         <strong class="text-center">(السعودية - مكة المكرمة)</strong>
-                        <div class="card-body">
-                            <strong>نوع النظام: </strong><span class="subheading">موقع إدارة الأملاك والعقارات</span>
-                            <br><strong>نوع التقنية: </strong><span class="subheading">C# ASP.NET MVC</span>
-                        </div>
+
                         <div class="card-footer">
                             <strong>فترة العمل معهم: </strong><span class="text-primary">2019 إلى الآن</span>
                         </div>
                     </div>
 
-
+                    <!--مستشفى الأمير سلطان-->
                     <div class="card">
                         <h3 class="card-header">مستشفى الأمير سلطان</h3>
                         <strong class="text-center">(السعودية - المدينة)</strong>
-                        <div class="card-body">
-                            <strong>نوع النظام: </strong><span class="subheading">موقع تعريفي بالمستشفى/إدارة
-                                الزيارات/إدارة التوظيف</span>
-                            <br><strong>نوع التقنية: </strong><span class="subheading">C# ASP.NET (مشارك في التطوير/دعم
-                                فني)</span>
-                        </div>
                         <div class="card-footer">
                             <strong>فترة العمل معهم: </strong>
                             <span class="text-primary">2020-2021 عن بعد</span>
@@ -358,55 +350,45 @@
 
 
 
-
+                    <!--الخيار الصائب-->
                     <div class="card">
                         <h3 class="card-header">مؤسسة الخيار الصائب</h3>
                         <strong class="text-center">(السعودية - مكة المكرمة)</strong>
-                        <div class="card-body">
-                            <strong>نوع النظام: </strong><span class="subheading">موقع إدارة ومتابعة مصروفات المقاولات
-                                وسلفيات العمال</span>
-                            <br><strong>نوع التقنية: </strong><span class="subheading">C# ASP.NET MVC</span>
-                        </div>
+
                         <div class="card-footer">
                             <strong>فترة العمل معهم: </strong>
                             <span class="text-primary">2017-2019</span>
                         </div>
                     </div>
 
+
+                    <!--تيم التقنية-->
                     <div class="card">
                         <h3 class="card-header">مؤسسة تيم التجارة</h3>
                         <strong class="text-center">(السعودية - جدة)</strong>
-                        <div class="card-body">
-                            <strong>نوع النظام: </strong><span class="subheading">برنامج محاسبي متكامل</span>
-                            <br><strong>نوع التقنية: </strong><span class="subheading">c# WinForms</span>
-                        </div>
+
                         <div class="card-footer">
                             <strong>فترة العمل معهم: </strong>
                             <span class="text-primary">2016</span>
                         </div>
                     </div>
 
-
+                    <!--بترونيدز-->
                     <div class="card">
-                        <h3 class="card-header">شركة بترونيدز للخدمات البترولية</h3>
+                        <h3 class="card-header">بترونيدز للخدمات البترولية</h3>
                         <strong class="text-center">(السودان - الخرطوم)</strong>
-                        <div class="card-body">
-                            <strong>نوع النظام: </strong><span class="subheading">برنامج مبيعات ومخان وتقسيط</span>
-                            <br><strong>نوع التقنية: </strong><span class="subheading">VB 6.0</span>
-                        </div>
+
                         <div class="card-footer">
                             <strong>فترة العمل معهم: </strong>
                             <span class="text-primary">2010-2016 دوام جزئي</span>
                         </div>
                     </div>
 
+                    <!--الشرائع-->
                     <div class="card">
                         <h3 class="card-header">شركة الشرائع الدولية</h3>
                         <strong class="text-center">(السودان - الخرطوم)</strong>
-                        <div class="card-body">
-                            <strong>نوع النظام: </strong><span class="subheading">برنامج مبيعات ومخازن</span>
-                            <br><strong>نوع التقنية: </strong><span class="subheading">VB 6.0</span>
-                        </div>
+
                         <div class="card-footer">
                             <strong>فترة العمل معهم: </strong>
                             <span class="text-primary">2003-2016</span>
@@ -420,10 +402,20 @@
 
 
                 <hr class="m-5" />
-                <h3 class="mb-5 text-center text-decoration-underline"> مشاريع اخرى منفذه</h3>
+                <h3 class="mb-5 text-center text-decoration-underline"> أنواع المشاريع المنفذة</h3>
                 <div class="mycards other-proj d-flex  justify-content-center flex-row flex-wrap">
+                    <!--برامج محاسبة مصغرة-->
+                    <div class="card">
+                        <h3 class="card-header">برامج محاسبة متكامل</h3>
+                        <strong class="text-center proj-info">(/محاسبة/شؤون افراد/مبيعات/مخزن)</strong>
+                        <hr class="m-0">
+                        <div class="card-body">
+                            <strong>نوع التقنية: </strong><span class="subheading">C# winForms</span>
+                            <br><strong>المنفذ لهم: </strong><span class="subheading">(مؤسسة تيم التجارة)</span>
+                        </div>
 
-
+                    </div>
+                    <!--برامج محاسبة مصغرة-->
                     <div class="card">
                         <h3 class="card-header">برامج محاسبة مصغرة</h3>
                         <strong class="text-center proj-info">(محاسبة/شؤون افراد/مبيعات/مخزن)</strong>
@@ -436,6 +428,7 @@
 
                     </div>
 
+                    <!--API لبرنامج توصيل طلبات-->
                     <div class="card">
                         <h3 class="card-header">API لبرنامج توصيل طلبات</h3>
                         <strong class="text-center proj-info">(إدارة مالية/خدمات توصيل/مبيعات/مخزن/ربط بين
@@ -449,6 +442,20 @@
 
                     </div>
 
+                    <!--متابعة إدارة الأملاك والعقارات-->
+                    <div class="card">
+                        <h3 class="card-header">إدارة الأملاك والعقارات</h3>
+                        <strong class="text-center proj-info">(إدارة مالية/عقود إيجارية/متابعة المستأجرين)</strong>
+                        <hr class="m-0">
+                        <div class="card-body">
+                            <strong>نوع التقنية: </strong><span class="subheading">C# ASP.NET</span>
+                            <br><strong>المنفذ لهم: </strong>
+                            <span class="subheading">مجموعة الأركان للعقار</span>
+                        </div>
+
+                    </div>
+
+                    <!--متابعة المصاعد-->
                     <div class="card">
                         <h3 class="card-header">متابعة المصاعد</h3>
                         <strong class="text-center proj-info">(إدارة مالية/عقود صيانة/إدارة أعطال/صيانة دورية)</strong>
@@ -461,6 +468,7 @@
 
                     </div>
 
+                    <!--فحص كورونا المستجد-->
                     <div class="card">
                         <h3 class="card-header">فحص كورونا المستجد</h3>
                         <strong class="text-center proj-info">(إدارة مالية / تسلسل اخذ العينات إلى اخراج
@@ -474,26 +482,26 @@
 
                     </div>
 
-<div class="card">
-    <h3 class="card-header">إدارة العيادات والصيدليات</h3>
-    <strong class="text-center proj-info">(إدارة مالية /عيادات / معامل /صيدلية)</strong>
-    <hr class="m-0">
-    <div class="card-body">
-        <strong>نوع التقنية: </strong><span class="subheading">VB 6.0</span>
-        <br><strong>المنفذ لهم: </strong>
-        <span class="subheading">مركز بر الوالدين/دكتور مبارك الفاضل</span>
-    </div>
+                    <!--إدارة العيادات والصيدليات-->
+                    <div class="card">
+                        <h3 class="card-header">إدارة العيادات والصيدليات</h3>
+                        <strong class="text-center proj-info">(إدارة مالية /عيادات / معامل /صيدلية)</strong>
+                        <hr class="m-0">
+                        <div class="card-body">
+                            <strong>نوع التقنية: </strong><span class="subheading">VB 6.0</span>
+                            <br><strong>المنفذ لهم: </strong>
+                            <span class="subheading">مركز بر الوالدين/دكتور مبارك الفاضل</span>
+                        </div>
 
-</div>
+                    </div>
 
 
 
                 </div>
 
-                <hr class="m-0" />
 
 
-                <!-- </div> -->
+
             </div>
         </section>
         <hr class="m-0" />
