--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
                     <span class="text-primary">(MVC / Core / API)
                     </span>
                 </div>
+                <div class="lead mb-3"><strong>التخصص الفرعي: </strong> مطور (اودو)
+                    <span class="text-primary">(Odoo Developer)
+                    </span>
+                </div>
                 <div class="lead mb-3"><strong>تاريخ الميلاد: </strong> 1402هـ / 1982 م .</div>
                 <div class="lead mb-3"><strong>الجنسية :</strong> سوداني</div>
                 <div class="lead mb-3"><strong>الحالة الإجتماعية :</strong> متزوج</div>
@@ -151,20 +155,7 @@
                                 style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
                         </div>
                     </div>
-                    <div class="card card-color"><img src="./img/tech/bootstrap.png" class="myImgs-img" alt="....">
-                        <div class="card-lng">BootStrap</div>
-                        <div class="progress">
-                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                                style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
-                        </div>
-                    </div>
-                    <div class="card card-color"><img src="./img/tech/nodejs.png" class="myImgs-img" alt="....">
-                        <div class="card-lng">NodeJS</div>
-                        <div class="progress">
-                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                                style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
-                        </div>
-                    </div>
+
                     <div class="card card-color"><img src="./img/tech/csharp.png" class="myImgs-img" alt="....">
                         <div class="card-lng">C#</div>
                         <div class="progress">
@@ -172,6 +163,37 @@
                                 style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
                         </div>
                     </div>
+                    <div class="card card-color"><img src="./img/tech/python.png" class="myImgs-img" alt="....">
+                        <div class="card-lng">Python</div>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                                style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+                        </div>
+                    </div>
+                    <div class="card card-color"><img src="./img/tech/odoo.png" class="myImgs-img" alt="....">
+                        <div class="card-lng">Odoo</div>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                                style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+                        </div>
+                    </div>
+
+                    <div class="card card-color"><img src="./img/tech/serenity.png" class="myImgs-img" alt="....">
+                        <div class="card-lng">Serenity</div>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                                style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">70%</div>
+                        </div>
+                    </div>
+
+                    <div class="card card-color"><img src="./img/tech/bootstrap.png" class="myImgs-img" alt="....">
+                        <div class="card-lng">BootStrap</div>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                                style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+                        </div>
+                    </div>
+
                     <div class="card card-color"><img src="./img/tech/mvc.png" class="myImgs-img" alt="....">
                         <div class="card-lng">ASP.NET MVC</div>
                         <div class="progress">
@@ -186,6 +208,28 @@
                                 style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
                         </div>
                     </div>
+
+                    <div class="card card-color"><img src="./img/tech/nodejs.png" class="myImgs-img" alt="....">
+                        <div class="card-lng">NodeJS</div>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                                style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+                        </div>
+                    </div>
+
+
+                    <div class="card card-color"><img src="./img/tech/typescript.png" class="myImgs-img" alt="....">
+                        <div class="card-lng">TypeScript</div>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                                style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">60%</div>
+                        </div>
+                    </div>
+
+
+
+
+
                     <div class="card card-color"><img src="./img/tech/signalr.png" class="myImgs-img" alt="....">
                         <div class="card-lng">SignalR</div>
                         <div class="progress">
@@ -330,14 +374,21 @@
 
                     <!--مؤسسة محمد صالح المنتشري-->
                     <div class="card">
+                        <h3 class="card-header">مؤسسة تمكين سوفت</h3>
+                        <strong class="text-center">(السعودية - جدة)</strong>
+
+                        <div class="card-footer">
+                            <strong>فترة العمل معهم: </strong><span class="text-primary">2022 إلى 2023</span>
+                        </div>
+                    </div>
+                    <div class="card">
                         <h3 class="card-header">مؤسسة محمد صالح المنتشري</h3>
                         <strong class="text-center">(السعودية - مكة المكرمة)</strong>
 
                         <div class="card-footer">
-                            <strong>فترة العمل معهم: </strong><span class="text-primary">2019 إلى الآن</span>
+                            <strong>فترة العمل معهم: </strong><span class="text-primary">2019 إلى 2022</span>
                         </div>
                     </div>
-
                     <!--مستشفى الأمير سلطان-->
                     <div class="card">
                         <h3 class="card-header">مستشفى الأمير سلطان</h3>
@@ -396,25 +447,52 @@
                     </div>
 
                     <hr class="m-0" />
-
-
                 </div>
 
 
                 <hr class="m-5" />
                 <h3 class="mb-5 text-center text-decoration-underline"> أنواع المشاريع المنفذة</h3>
                 <div class="mycards other-proj d-flex  justify-content-center flex-row flex-wrap">
-                    <!--برامج محاسبة مصغرة-->
                     <div class="card">
-                        <h3 class="card-header">برامج محاسبة متكامل</h3>
-                        <strong class="text-center proj-info">(/محاسبة/شؤون افراد/مبيعات/مخزن)</strong>
+                        <h3 class="card-header">برامج إدارة مقاولات</h3>
+                        <strong class="text-center proj-info">(محاسبة/قوائم مالية/شؤون
+                            افراد/مبيعات/مشتريات/مخزن/فروع/إدارة مشاريع ومقاولات وحساب تكلفتها)</strong>
                         <hr class="m-0">
                         <div class="card-body">
+                            <strong>نوع التقنية: </strong><span class="subheading">python - odoo</span>
+                            <br><strong>المنفذ لهم: </strong><span class="subheading">(شركة مفهوم إعمار/مؤسسة فكرة حائط
+                                2023)</span>
+                         </div>
+                    </div>
+                    
+                    <div class="card">
+                        <h3 class="card-header">برامج نقاط بيع</h3>
+                        <strong class="text-center proj-info">(محاسبة/قوائم مالية/شؤون
+                            افراد/مبيعات/مشتريات/مخزن/نقاط بيع)</strong>
+                        <hr class="m-0">
+                        <div class="card-body">
+                            <strong>نوع التقنية: </strong><span class="subheading">python - odoo</span>
+                            <br><strong>المنفذ لهم: </strong><span class="subheading">(مؤسسة وردة
+                                2023)</span>
+                         </div>
+                    </div>
+                    
+                    <div class="card">
+                        <h3 class="card-header">برامج محاسبة متكامل</h3>
+                        <strong class="text-center proj-info">(محاسبة/قوائم مالية/شؤون
+                            افراد/مبيعات/مشتريات/مخزن/فروع)</strong>
+                        <hr class="m-0">
+                        <div class="card-body">
+                            <strong>نوع التقنية: </strong><span class="subheading">C# Asp Core - Serenity</span>
+                            <br><strong>المنفذ لهم: </strong><span class="subheading">(مؤسسة تمكين سوفت 2023)</span>
+                            <hr class="m-0">
                             <strong>نوع التقنية: </strong><span class="subheading">C# winForms</span>
-                            <br><strong>المنفذ لهم: </strong><span class="subheading">(مؤسسة تيم التجارة)</span>
+                            <br><strong>المنفذ لهم: </strong><span class="subheading">( مؤسسة تيم التجارة 2016 )</span>
                         </div>
 
+
                     </div>
+
                     <!--برامج محاسبة مصغرة-->
                     <div class="card">
                         <h3 class="card-header">برامج محاسبة مصغرة</h3>
