--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                                 style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
                         </div>
                     </div>
-                    <div class="card card-color"><img src="./img/tech/kotlin.png" class="myImgs-img" alt="....">
+                    <!-- <div class="card card-color"><img src="./img/tech/kotlin.png" class="myImgs-img" alt="....">
                         <div class="card-lng">Kotlin</div>
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
@@ -267,7 +267,7 @@
                             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
                                 style="width: 55%;" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">55%</div>
                         </div>
-                    </div>
+                    </div> -->
 
                     <div class="card card-color"><img src="./img/tech/git.png" class="myImgs-img" alt="....">
                         <div class="card-lng">git</div>
@@ -462,9 +462,9 @@
                             <strong>نوع التقنية: </strong><span class="subheading">python - odoo</span>
                             <br><strong>المنفذ لهم: </strong><span class="subheading">(شركة مفهوم إعمار/مؤسسة فكرة حائط
                                 2023)</span>
-                         </div>
+                        </div>
                     </div>
-                    
+
                     <div class="card">
                         <h3 class="card-header">برامج نقاط بيع</h3>
                         <strong class="text-center proj-info">(محاسبة/قوائم مالية/شؤون
@@ -474,9 +474,9 @@
                             <strong>نوع التقنية: </strong><span class="subheading">python - odoo</span>
                             <br><strong>المنفذ لهم: </strong><span class="subheading">(مؤسسة وردة
                                 2023)</span>
-                         </div>
+                        </div>
                     </div>
-                    
+
                     <div class="card">
                         <h3 class="card-header">برامج محاسبة متكامل</h3>
                         <strong class="text-center proj-info">(محاسبة/قوائم مالية/شؤون
