--- a/index.html
+++ b/index.html
@@ -186,13 +186,13 @@
                         </div>
                     </div>
 
-                    <div class="card card-color"><img src="./img/tech/bootstrap.png" class="myImgs-img" alt="....">
+                    <!-- <div class="card card-color"><img src="./img/tech/bootstrap.png" class="myImgs-img" alt="....">
                         <div class="card-lng">BootStrap</div>
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
                                 style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
                         </div>
-                    </div>
+                    </div> -->
 
                     <div class="card card-color"><img src="./img/tech/mvc.png" class="myImgs-img" alt="....">
                         <div class="card-lng">ASP.NET MVC</div>
